--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,40 +1,15 @@
 
 /* =================body================= */
 
-$font-stack:    'OpenSansRegular', sans-serif;
-$primary-color: #333;
-$primary-fz: 16px;
-$primary-l-heigth: 1.4;
+$font-stack:  "RobotoRegular",  'OpenSansRegular', sans-serif;
+$primary-color: #ffffff;
+$primary-fz: 18px;
+$primary-l-heigth: 2;
 
 	/* ==mob== */
 $primary-fz-mob: 14px;
-$primary-l-heigth-mob: 1.4;
+$primary-l-heigth-mob: 2;
 
-
-/* ======================btn================= */
-
-$btn-font-size: 20px;
-$btn-color: #000;
-$btn-color-h: #fff;
-$btn-width: 100%;
-$btn-radius: 10px;
-$btn-pd: 15px 0;
-$btn-bgc: #ffba14;
-$btn-bgc-h: #53f2f0;
-$btn-border: none;
-$btn-text-transf: none;
-	
-	/* ==mob== */
-$btn-pd-mob: 15px 0;
-$btn-font-size-mob: 16px;
-
-/* =================title================= */
-
-$title-font-size: 20px;
-$title-color: #2e2e2e;
-
-	/* ==mob== */
-$title-font-size-mob: 14px
 
 /* =================input================== */
 
