--- a/src/sass/responsive.scss
+++ b/src/sass/responsive.scss
@@ -1,5 +1,4 @@
-@import "responsive_960";
-@import "responsive_743";
+@import "variables";
 /* ===================================320=============================== */
 
 
@@ -15,14 +14,6 @@
 		line-height: $primary-l-heigth-mob;
 	}
 
-	.btn{
-		padding: $btn-pd-mob;
-		font-size: $btn-font-size-mob;
-	}
-
-	.title{
-		font-size: $title-font-size-mob;
-	}
 
 /* ==========HEADER============ */
 	header{
