--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -62,7 +62,7 @@ input{
 			position: relative;
 			top: -25px;
 			animation-name: spiny;
-			animation-duration: 2s;
+			animation-duration: 3.5s;
 			animation-iteration-count: infinite;
 			animation-timing-function: ease-in-out;
 
@@ -76,7 +76,7 @@ input{
 			font-family: "Melbourne_reg";
 			display: inline-block;
 			animation-name: spinx;
-			animation-duration: 2s;
+			animation-duration: 3.5s;
 			animation-iteration-count: infinite;
 			animation-timing-function: ease-in-out;
 		}
@@ -429,6 +429,12 @@ input{
 
 	&__logo{
 		padding-top: 500px;
+
+		.logo-t{
+			position: relative;
+			margin-left: -130px;
+    	top: -80px;
+		}
 	}
 
 	&__deer{
@@ -617,12 +623,84 @@ input{
 	}
 }
 
-/* ==========main-5============ */
-.main-5{
-	
-	&__body{
-		
-	}	
+/* ==========main-3============ */
+.main-3{
+	margin-top: -1px;
+	.slick{
+		&-slide{
+			max-height: 840px;
+			img{
+				width: 100%;
+				//height: 100%;
+			}
+		}
+
+
+	}
+
+	.slider-nav{
+		position: relative;
+		z-index: 6;
+		&__container{
+			width: 72%;
+			position: relative;
+			&:before{
+				position: absolute;
+				content: '';
+				border: 30px solid transparent;
+				border-right: 30px solid #000;
+				border-top: 30px solid #000;
+				display: block;
+				right: -1px;
+				width: 0;
+				height: 0;
+				z-index: 10;
+			}
+		}
+		.slick{
+			&-slide{
+				border: 2px solid #000;
+				opacity: 0.6;
+				height: 108px;
+				overflow: hidden;
+			}
+
+			&-center{
+				opacity: 1;
+			}
+		}
+
+	}
+
+	.slider-for{
+
+
+	}
+
+	.slider{
+		position: relative;
+		z-index: 3;
+		&:before{
+			position: absolute;
+			content: '';
+			left: 0;
+			top: 0 ;
+			width: 100%;
+			background-image: url("../img/mask.png");
+			height: 100%;
+			background-size: 100% 98%;
+			z-index: 5;
+		}
+
+		&__desc{
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+		}
+	}
+
+
 }
 
 /* ==========main-6============ */
